Make sure the canvas isn't vertically or horizontally distorted

--- a/draw/sibird/style.css
+++ b/draw/sibird/style.css
@@ -42,8 +42,18 @@ h1 {
 
 #triangle-canvas {
     background-color: white;
-    flex-grow: 1;
-    width: 100%;
-    height: 100%;
     display: block;
+}
+
+.canvas-wrapper {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.canvas-wrapper canvas {
+    max-width: 100%;
+    max-height: 100%;
+    aspect-ratio: 1 / 1;
 }
